--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
+    "@types/express": "^4.16.1",
     "@types/lodash": "^4.14.123",
     "babel-eslint": "^10.0.1",
     "dotenv": "^7.0.0",
@@ -34,6 +35,8 @@
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.2.2",
+    "express-fileupload": "^1.1.3-alpha.2",
+    "localforage": "^1.7.3",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
