--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "build-server": "nuxt build && cp -R dist/* /var/www/html",
+    "build-server": "nuxt generate && cp -R dist/* /var/www/html",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/localforage": "^1.0.2",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.4.0"
@@ -36,10 +37,10 @@
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.2.2",
     "express-fileupload": "^1.1.3-alpha.2",
-    "localforage": "^1.7.3",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "vue-i18n": "^8.9.0"
   }
 }
