--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/eslint-config": "^0.0.1",
     "@types/express": "^4.16.1",
     "@types/lodash": "^4.14.123",
+    "aws-api-gateway-client": "^0.2.16",
     "babel-eslint": "^10.0.1",
     "dotenv": "^7.0.0",
     "eslint": "^5.15.1",
