--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@nuxtjs/localforage": "^1.0.2",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "nuxt": "^2.4.0"
+    "nuxt": "^2.4.0",
+    "nuxt-i18n": "^6.0.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
@@ -41,7 +42,6 @@
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
-    "sass-loader": "^7.1.0",
-    "vue-i18n": "^8.9.0"
+    "sass-loader": "^7.1.0"
   }
 }
