Add locale switching capability

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/localforage": "^1.0.2",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "flag-icon-css": "^3.3.0",
     "nuxt": "^2.4.0",
     "nuxt-i18n": "^6.0.0"
   },
