--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.16.4",
     "flag-icon-css": "^3.3.0",
     "nuxt": "^2.4.0",
-    "nuxt-i18n": "^6.0.0"
+    "nuxt-i18n": "^6.0.0",
+    "vue-color": "^2.7.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
