--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/localforage": "^1.0.2",
+    "@nuxtjs/markdownit": "^1.2.6",
+    "axios": "^0.19.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "flag-icon-css": "^3.3.0",
