Update config take 2

--- a/default.conf
+++ b/default.conf
@@ -1,13 +1,13 @@
 server {
   listen 443 ssl;
-  server_name {{ PUT SERVER HOST NAME HERE }};
+  server_name rando.minishmaker.com;
   root /var/www/html/_nuxt;
   ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
   ssl_ciphers         HIGH:!aNULL:!MD5;
   error_page 404 /index.html;
 
   location /api {
-    proxy_pass http://127.0.0.1:3001/api;
+    proxy_pass rando.minishmaker.com:3001/api;
   }
 
   location / {
