--- a/default.conf
+++ b/default.conf
@@ -1,17 +1,16 @@
 server {
-  listen 443 ssl;
+  listen 80 default_server;
+  listen [::]:80 default_server;
   server_name rando.minishmaker.com;
-  root /var/www/html/_nuxt;
-  ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
-  ssl_ciphers         HIGH:!aNULL:!MD5;
+  root /var/www/html;
   error_page 404 /index.html;
 
   location /api {
-    proxy_pass rando.minishmaker.com:3001/api;
+    proxy_pass http://127.0.0.1:3001/api;
   }
 
   location / {
     root /var/www/html;
-    try_files $uri index.html;
+    try_files $uri $uri/ =404;
   }
 }
