--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/localforage": "^1.0.2",
     "@nuxtjs/markdownit": "^1.2.6",
     "axios": "^0.19.0",
