--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "flag-icon-css": "^3.3.0",
     "nuxt": "^2.4.0",
     "nuxt-i18n": "^6.0.0",
+    "vue-clickaway": "^2.2.2",
     "vue-color": "^2.7.0"
   },
   "devDependencies": {
